test/fail/bad-heartbeat.mo
import Prim "mo:⛔";

actor {

  var count = 0;
  var max = 10;

  system func heartbeat() : () { // reject, should be async ()
  };
};

